# rfid_sensor

./: CMakeLists.txt  README.md  package.xml
include/: rfidAntenna.h  rfidTag.h
msg/: Tag.msg  TagArray.msg
src/: rfidAntenna.cpp  rfidTag.cpp
